# git-rs

./: Cargo.toml  README.md
rit_cli/: Cargo.toml
rit_commands/: Cargo.toml
rit_commands/src/: lib.rs  main.rs
rit_commands/src/init/src/: lib.rs
rit_commands/src/push/src/: lib.rs
rit_init/: Cargo.toml
