[workspace]
resolver = "2"
members = [
	"rit_cli",
	"rit_commands",
	"rit_commands/src/push",
	"rit_commands/src/init",
	"rit_commands/src/diff",
]

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
# lto = true # VERY slightly smaller wasm
# opt-level = 's' # 10-20% smaller wasm compared to `opt-level = 3`
# opt-level = 1 # very slow and big wasm. Don't do this.
opt-level = 2 # fast and small wasm, basically same as `opt-level = 's'`
# opt-level = 3 # unecessarily large wasm for no performance gain

# debug = true # include debug symbols, useful when profiling wasm
